--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,16 +4,31 @@
 
 @layer base {
 	body {
-		@apply bg-[#141414] text-white;
+		@apply bg-[#141414] border-b-indigo-100 text-white;
 	}
 
 	header {
 		@apply fixed top-0 z-50 flex w-full items-center justify-between px-4 py-4 transition-all lg:px-10;
 	}
+	footer {
+		@apply bg-[#1E0342] text-[#b3b3b3];
+	}
 }
 
 @layer components {
+	.navLink {
+		@apply cursor-pointer text-lg font-normal text-[#fff] hover:text-[#b3b3b3];
+	}
+
 	.input {
 		@apply w-full rounded bg-[#333] px-5 py-4 placeholder-[gray] outline-none focus:bg-[#454545];
+	}
+}
+
+@layer utilities {
+	input[type='number']::-webkit-inner-spin-button,
+	input[type='number']::-webkit-outer-spin-button {
+		-webkit-appearance: none;
+		margin: 0;
 	}
 }
